@@ -1,13 +1,12 @@
 package HealMeals.Api.Controller;
+
 import HealMeals.Api.DTO.RegisterRequestDTO;
 import HealMeals.Api.DTO.UserDTO;
-import HealMeals.Api.model.User;
 import HealMeals.Api.service.AuthService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.UUID;
 
@@ -19,14 +18,14 @@ public class AuthController {
     private final AuthService authService;
 
     @PostMapping("/register")
-    public ResponseEntity<User> register(@RequestBody RegisterRequestDTO dto) {
+    public ResponseEntity<?> register(@RequestBody RegisterRequestDTO dto) {
         return ResponseEntity.ok(authService.registerFromDto(dto));
     }
 
     @PostMapping("/login")
     public ResponseEntity<Map<String, String>> login(@RequestBody Map<String, String> credentials) {
         String token = authService.login(credentials.get("email"), credentials.get("password"));
-        return ResponseEntity.ok(Collections.singletonMap("token", token));
+        return ResponseEntity.ok(Map.of("token", token));
     }
 
     @PutMapping("/update-profile/{id}")
@@ -44,8 +43,8 @@ public class AuthController {
         return ResponseEntity.ok("Password updated successfully");
     }
 
-    @PostMapping("/logout")
-    public ResponseEntity<String> logout() {
-        return ResponseEntity.ok(authService.logout());
-    }
+    // @PostMapping("/logout")
+    // public ResponseEntity<String> logout() {
+    //     return ResponseEntity.ok(authService.logout());
+    // }
 }
